Fix plot size on mobile

--- a/web/assets/css/main.scss
+++ b/web/assets/css/main.scss
@@ -2,3 +2,7 @@
 ---
 
 @import "main";
+
+img {
+    max-width: 100%;
+}
